@@ -527,9 +527,8 @@ class CActiveRecordTest extends CTestCase
 			'select'=>'title',
 			'condition'=>'posts.id=:id',
 			'limit'=>1,
-			'offset'=>1,
+			'offset'=>2,
 			'order'=>'posts.title',
-			'group'=>'posts.id',
 			'params'=>array(':id'=>2)));
 		$this->assertTrue($posts===array());
 	}
