@@ -7,6 +7,7 @@ Version 1.1a to be released
 - New: Refactored scenario-based validation and massive assignments (Qiang)
 - New: Added CDbSchema::checkIntegrity() and resetSequence() (Qiang)
 - New: Added phpunit-based testing framework (Qiang)
+- Chg: Changed the default behavior for AR eager loading so that it generates and executes a single SQL statement (Qiang)
 
 Version 1.0.7 to be released
 ----------------------------
